# hw_12.2_task5

./: .gitignore  pyproject.toml
tests/: test_dicts.py
utils/: dicts.py
